[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
resource_name = "Cast"
length = 0.975
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675, 0.75, 0.825, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hook"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 1.6
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Ready"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 72, 59 )

[node name="Player" type="Node2D"]
position = Vector2( 0, 127 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -7.62939e-06 )
texture = ExtResource( 1 )
centered = false
hframes = 22
frame = 21

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Cast = SubResource( 2 )
anims/Hook = SubResource( 4 )
anims/Idle = SubResource( 1 )
anims/Ready = SubResource( 3 )

[node name="FishTimer" type="Timer" parent="."]

[node name="HookTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 72, 70 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="FishTimer" to="." method="_on_FishTimer_timeout"]
[connection signal="timeout" from="HookTimer" to="." method="_on_HookTimer_timeout"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
